Upgrade #12: Complete Documentation, Release & Runbook Implementation
 FINAL ACHIEVEMENT: Production-ready documentation suite

 Documentation Created:
 README.md - Comprehensive quickstart guide with features, setup, and troubleshooting
 .env.example - Detailed configuration template with security notes
 CHANGELOG.md - Versioned release tracking with semantic versioning
 LICENSE - MIT license with trading software disclaimer
 RUNBOOK.md - Production deployment and maintenance guide

 Production Deployment Support:
 Windows Task Scheduler setup guide
 NSSM service manager configuration
 Docker deployment option
 Enhanced run_bot.bat with error handling
 Monitoring and alerting procedures
 Emergency response protocols

 Project Metadata Updates:
 pyproject.toml updated to v1.2.0 (Production/Stable)
 Enhanced project description and keywords
 Complete URL configuration (docs, changelog, runbook)
 Multi-Python version support (3.11, 3.12, 3.13)

 Infrastructure Documentation:
 24/7 service deployment instructions
 Performance optimization guide
 Security considerations and best practices
 Troubleshooting and debugging procedures
 Backup and disaster recovery protocols

Status: New environment can be fully operational from README
Goal achieved: Complete production-ready documentation with versioned releases

--- a/.env.example
+++ b/.env.example
@@ -1,123 +1,195 @@
 # =============================================================================
-# TRADING BOT CONFIGURATION
+# Trading Bot Environment Configuration
 # =============================================================================
-# Copy this file to .env and configure your settings
-# All values are examples - replace with your actual configuration
+# Copy this file to .env and customize with your actual values
+# Never commit .env file to version control!
 
 # =============================================================================
-# ENVIRONMENT & OPERATION MODE
+# 🔌 MetaTrader 5 Connection Settings
 # =============================================================================
-# Application environment: development, staging, production, testing
-ENVIRONMENT=development
 
-# Dry run mode: true = no real trades, false = live trading
-# IMPORTANT: Set to false only when you're ready for live trading!
+# MT5 Terminal executable path (Windows only)
+# For attach mode: path to running terminal
+# For login mode: path to terminal executable
+MT5_TERMINAL_PATH=C:\Program Files\MetaTrader 5\terminal64.exe
+
+# Connection mode: true=attach to running terminal, false=login with credentials
+# Attach mode: connects to already logged-in terminal (recommended for live)
+# Login mode: programmatically logs in with credentials (good for testing)
+ATTACH_MODE=true
+
+# Login credentials (required only when ATTACH_MODE=false)
+# Demo account example:
+MT5_LOGIN=942138
+MT5_PASSWORD=your_mt5_password_here
+MT5_SERVER=MOTForex-Demo-1
+
+# =============================================================================
+# 📈 Trading Strategy Configuration
+# =============================================================================
+
+# Primary trading symbol (currency pair or commodity)
+# Examples: EURUSD, GBPUSD, XAUUSD (Gold), USDJPY
+SYMBOL=XAUUSD
+
+# Timeframe in minutes for chart analysis
+# Common values: 1, 5, 15, 30, 60, 240, 1440
+# 30 = 30-minute charts (recommended for intraday)
+TF_MIN=30
+
+# Risk percentage per trade (as decimal)
+# 0.01 = 1% of account balance per trade
+# 0.02 = 2% risk (more aggressive)
+# 0.005 = 0.5% risk (conservative)
+RISK_PCT=0.01
+
+# Stop Loss multiplier (based on ATR - Average True Range)
+# 1.5 = Stop loss at 1.5x ATR distance from entry
+# Higher values = wider stops, lower risk of premature exits
+SL_MULT=1.5
+
+# Take Profit multiplier (based on ATR)
+# 3.0 = Take profit at 3x ATR distance (2:1 risk-reward ratio)
+# Recommended: 2.0-4.0 for good risk-reward
+TP_MULT=3.0
+
+# =============================================================================
+# 🛡️ Safety & Risk Management
+# =============================================================================
+
+# Dry run mode: true=paper trading only, false=real trades
+# ALWAYS start with DRY_RUN=true for testing!
 DRY_RUN=true
 
-# In production, live trading requires explicit confirmation
-# CONFIRM_LIVE_TRADING=yes
+# Maximum number of trades per day (prevents overtrading)
+# Recommended: 3-5 for conservative approach
+MAX_TRADES_PER_DAY=3
+
+# Maximum daily loss percentage (as decimal)
+# 0.05 = 5% daily loss limit (trading stops for the day)
+# 0.03 = 3% conservative daily limit
+MAX_DAILY_LOSS_PCT=0.05
+
+# Maximum number of simultaneous open positions
+# 1 = Only one position at a time (recommended)
+# 2-3 = Multiple positions (requires more capital)
+MAX_OPEN_POSITIONS=1
+
+# Cooldown period between trades (in minutes)
+# 60 = 1 hour minimum between trades
+# 30 = 30 minutes (more active trading)
+TRADE_COOLDOWN_MINUTES=60
+
+# Trading session restrictions
+# TOKYO = Asian session (9:00-12:00 UB time)
+# LDN_NY = London/NY overlap (16:00-02:00 UB time)
+# ANY = Trade any time (24/5)
+TRADING_SESSION=LDN_NY
 
 # =============================================================================
-# METATRADER 5 CONNECTION
+# 📱 Telegram Notifications
 # =============================================================================
-# Connection mode: true = attach to running terminal, false = headless login
-MT5_ATTACH_MODE=true
 
-# Headless mode settings (required when ATTACH_MODE=false)
-# MT5_TERMINAL_PATH=C:\Program Files\MetaTrader 5\terminal64.exe
-# MT5_LOGIN=12345678
-# MT5_PASSWORD=your_password_here
-# MT5_SERVER=YourBroker-Demo
+# Telegram Bot Token (get from @BotFather)
+# Example format: 123456789:ABCdefGHIjklMNOpqrSTUvwxYZ
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 
-# Connection timeout in seconds
-# MT5_CONNECTION_TIMEOUT=30
+# Telegram Chat IDs for notifications (comma-separated for multiple recipients)
+# To get your chat ID: send /start to @userinfobot
+# Examples:
+# Single user: 123456789
+# Multiple users: 123456789,987654321,555666777
+TELEGRAM_CHAT_ID=your_telegram_chat_id_here
 
-# =============================================================================
-# TRADING STRATEGY
-# =============================================================================
-# Trading symbol
-TRADING_SYMBOL=XAUUSD
-
-# Timeframe in minutes (1, 5, 15, 30, 60, 240, 1440)
-TRADING_TF_MIN=30
-
-# Risk per trade as percentage of balance (0.1% to 10%)
-TRADING_RISK_PCT=0.01
-
-# Trading session filter: TOKYO, LDN_NY, ANY
-TRADING_SESSION=ANY
-
-# Strategy parameters
-TRADING_COOLDOWN_MULT=1.0
-TRADING_MIN_ATR=1.2
-TRADING_SL_MULT=1.5
-TRADING_TP_MULT=3.0
-
-# Position sizing: USD P&L per lot per $1 price move
-TRADING_USD_PER_LOT_PER_USD_MOVE=100.0
+# Send charts with trade notifications
+# true = Include technical analysis charts
+# false = Text notifications only
+TELEGRAM_SEND_CHARTS=true
 
 # =============================================================================
-# SAFETY & RISK CONTROLS
+# 🔗 External Integrations
 # =============================================================================
-# Enable safety gates
-SAFETY_LIMITS_ENABLED=true
 
-# Daily limits
-SAFETY_MAX_TRADES_PER_DAY=8
-SAFETY_MAX_DAILY_LOSS_PCT=3.0
-SAFETY_MAX_OPEN_POSITIONS=1
+# Trading Economics API for news filtering
+# Get free API key from: https://tradingeconomics.com/api
+# Leave empty to disable news filtering
+TRADING_ECONOMICS_API_KEY=your_trading_economics_api_key
 
-# News filtering
-SAFETY_ENABLE_NEWS_FILTER=true
-SAFETY_NEWS_WINDOW_MINUTES=60
-
-# =============================================================================
-# TELEGRAM NOTIFICATIONS
-# =============================================================================
-# Telegram bot token from @BotFather
-TELEGRAM_BOT_TOKEN=1234567890:ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijk
-
-# Multiple chat IDs (comma-separated)
-TELEGRAM_CHAT_IDS=-1001234567890,@your_channel,-1009876543210
-
-# Single chat ID (legacy fallback)
-# TELEGRAM_CHAT_ID=-1001234567890
-
-# Error alerts via Telegram
-TELEGRAM_ERROR_ALERTS=true
-
-# Telegram API timeout
-# TELEGRAM_TIMEOUT_SECONDS=30
+# News impact filtering
+# HIGH = Only avoid high-impact news (recommended)
+# MEDIUM = Avoid medium and high impact news
+# ALL = Avoid all news events (very conservative)
+NEWS_FILTER_LEVEL=HIGH
 
 # =============================================================================
-# EXTERNAL INTEGRATIONS
+# 🔧 Technical Settings
 # =============================================================================
-# Trading Economics API key for news filtering
-# API_TE_API_KEY=your_te_api_key_here
 
-# API request timeout
-# API_TIMEOUT_SECONDS=10
-
-# =============================================================================
-# LOGGING & AUDIT
-# =============================================================================
-# Log level: DEBUG, INFO, WARNING, ERROR
+# Logging level: DEBUG, INFO, WARNING, ERROR
+# DEBUG = Detailed logs (development)
+# INFO = Standard logs (production)
 LOG_LEVEL=INFO
 
-# Log directory (relative to project root)
-# LOG_DIRECTORY=logs
+# Log file rotation
+# true = Create new log files daily
+# false = Single log file (grows large)
+LOG_ROTATION=true
 
-# Enable trade audit logging
-LOG_TRADE_LOG_ENABLED=true
+# Chart generation settings
+# true = Generate and save trading charts
+# false = Skip chart generation (faster)
+GENERATE_CHARTS=true
 
-# Log retention in days
-# LOG_RETENTION_DAYS=30
+# Database/State persistence
+# SQLite database file for trade history
+# Leave default unless you have specific requirements
+DB_PATH=trading_data.db
 
 # =============================================================================
-# DEVELOPMENT OVERRIDES
+# 🏗️ Development & Testing
 # =============================================================================
-# Force specific trading decisions (for testing only)
-# TEST_FORCE_SIDE=BUY
 
-# Enable debug features
-# DEBUG_ENABLED=true
+# Force trading signals (for testing only)
+# NONE = Normal operation
+# BUY = Force buy signals
+# SELL = Force sell signals
+# Use with DRY_RUN=true for testing strategies
+FORCE_SIGNAL=NONE
+
+# Backtesting data source
+# LOCAL = Use local CSV files
+# MT5 = Download from MT5 (requires connection)
+BACKTEST_DATA_SOURCE=MT5
+
+# Strategy selection
+# BASELINE = Default MA crossover + RSI strategy
+# ADVANCED = Multi-timeframe analysis
+# CUSTOM = Custom strategy implementation
+STRATEGY_NAME=BASELINE
+
+# =============================================================================
+# 📋 Example Production Configuration
+# =============================================================================
+# For live trading, use these recommended settings:
+#
+# ATTACH_MODE=true
+# DRY_RUN=false
+# RISK_PCT=0.005
+# MAX_TRADES_PER_DAY=2
+# MAX_DAILY_LOSS_PCT=0.03
+# TRADING_SESSION=LDN_NY
+# LOG_LEVEL=INFO
+# TELEGRAM_SEND_CHARTS=true
+#
+# ALWAYS test thoroughly with DRY_RUN=true first!
+
+# =============================================================================
+# 🚨 Security Notes
+# =============================================================================
+# 1. Never commit .env file to version control
+# 2. Use strong, unique passwords for MT5 accounts
+# 3. Regularly rotate Telegram bot tokens
+# 4. Monitor logs for suspicious activity
+# 5. Start with small position sizes
+# 6. Always use stop losses
+# 7. Test extensively before live trading
