--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,28 +4,35 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "trading-bot"
-version = "1.0.0"
-description = "Advanced Trading Bot with Backtesting and Risk Management"
+version = "1.2.0"
+description = "Production-Ready Automated Trading Bot with MT5 Integration, Advanced Risk Management, and Comprehensive Documentation"
 authors = [
-    {name = "Trading Bot Team", email = "team@example.com"}
+    {name = "Trading Bot Team", email = "team@tradingbot.com"}
 ]
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.11"
-keywords = ["trading", "bot", "backtest", "risk-management", "forex"]
+keywords = ["trading", "bot", "metatrader", "mt5", "backtest", "risk-management", "forex", "automation", "production"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Financial and Insurance Industry",
     "Topic :: Office/Business :: Financial :: Investment",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Operating System :: Microsoft :: Windows",
+    "Environment :: No Input/Output (Daemon)",
+    "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
 [project.urls]
 "Homepage" = "https://github.com/ellipti/BOT"
+"Documentation" = "https://github.com/ellipti/BOT/blob/main/README.md"
+"Repository" = "https://github.com/ellipti/BOT"
 "Bug Reports" = "https://github.com/ellipti/BOT/issues"
-"Source" = "https://github.com/ellipti/BOT"
+"Changelog" = "https://github.com/ellipti/BOT/blob/main/CHANGELOG.md"
+"Runbook" = "https://github.com/ellipti/BOT/blob/main/RUNBOOK.md"
 
 # Tool configurations
 [tool.black]
