test(ci): add MT5-less testing strategy (skip/mocks) and optional MT5 integration job
- tests/conftest.py: MT5 availability detection & comprehensive MockMT5
- tests/fixtures/fake_broker.py: Complete FakeBroker with event bus integration
- tests/test_mt5_less_strategy.py: Example test patterns (unit/integration)
- .github/workflows/ci-mt5.yml: Optional MT5 integration workflow
- Updated existing test files with proper skip/mock markers
- Updated CI workflow to skip MT5 integration tests by default
- Updated pyproject.toml with MT5-less testing markers
- docs/MT5_TESTING_STRATEGY.md: Comprehensive strategy documentation

ACCEPTANCE:
 Public CI: unit tests green, MT5 tests SKIPPED
 Local (MT5 available): integration tests RUN/PASS
 FakeBroker: idempotent executor, event bus, sizing without MT5
 CI matrix: cross-platform testing without MT5 dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,11 +108,18 @@ jobs:
 
       - name: "🧪 Run Tests"
         run: |
-          pytest -q --tb=short --maxfail=3
+          # Run tests with MT5-less strategy:
+          # - Unit tests (including MT5 mocks): Always run
+          # - Integration tests requiring MT5: Skip in CI
+          pytest -q --tb=short --maxfail=3 \
+            -m "not mt5_integration" \
+            --cov=core --cov=adapters --cov=tests \
+            --cov-report=xml --cov-report=term-missing
         env:
           # Ensure consistent test environment
           PYTHONPATH: ${{ github.workspace }}
           DRY_RUN: "true"
+          # Note: MT5 integration tests run in separate workflow (ci-mt5.yml)
 
       - name: "📈 Upload Test Results"
         if: always()
